Revision history for PDF-Native

{{$NEXT}}

0.0.4  2023-10-23T09:25:09+13:00
    - Also widen predictor rows parameter; from uint_16 to size_t.

0.0.3  2023-10-22T08:47:19+13:00
    - Writer integers as 64bit / 18 digits (was 32 bit / 8 digits)

0.0.2  2022-06-06T09:11:51+12:00
    - Fix writing of Name Objects.
    - Add subroutines unpack-xref-stream() and pack-xref-stream() to
      PDF::Native::Buf

0.0.1  2022-06-02T10:21:42+12:00
    - Initial version